@@ -1,7 +1,7 @@
 Package: basefun
 Title: Infrastructure for Computing with Basis Functions
-Version: 0.0-39
-Date: 2017-12-18
+Version: 0.0-40
+Date: 2018-02-23
 Authors@R: person("Torsten", "Hothorn", role = c("aut", "cre"),
                   email = "Torsten.Hothorn@R-project.org", comment = c(ORCID = "0000-0001-8301-0471"))  
 Description: Some very simple infrastructure for basis functions.
@@ -9,8 +9,8 @@ Depends: variables (>= 0.0-30)
 Imports: stats, polynom, Matrix, orthopolynom, methods
 License: GPL-2
 NeedsCompilation: yes
-Packaged: 2017-12-18 12:38:57 UTC; hothorn
-Author: Torsten Hothorn [aut, cre] (0000-0001-8301-0471)
+Packaged: 2018-02-23 09:51:01 UTC; hothorn
+Author: Torsten Hothorn [aut, cre] (<https://orcid.org/0000-0001-8301-0471>)
 Maintainer: Torsten Hothorn <Torsten.Hothorn@R-project.org>
 Repository: CRAN
-Date/Publication: 2017-12-18 19:07:06 UTC
+Date/Publication: 2018-02-23 12:48:17 UTC
