@@ -1,6 +1,6 @@
-09c77a4968568bf0560cb8a378e27957 *DESCRIPTION
-0a2bb0178f79e778b44d05e7895e4e55 *NAMESPACE
-5f993b6d2ba607402321c21481a824a5 *R/bernstein.R
+fbfc6e70658a63adff78740153a61296 *DESCRIPTION
+1120043a93a8a0d53babffe50eb1515e *NAMESPACE
+b96ef493996c9151c91c44ecb4101bc4 *R/bernstein.R
 3126d7ad938777a2f05214a714d0e00f *R/box_bases.R
 e29be446cc3f19e171e814ac61caefbc *R/cbind_bases.R
 dfaa6e61ada2f5144c1952ffddde84a8 *R/cyclic.R
@@ -10,11 +10,11 @@ c053ad0299f51085a04195096215bfd7 *R/intercept.R
 725532e2af625944eb301eb3e3f73ae2 *R/kronecker.R
 d59c91433a5f923ac2067047511de586 *R/legendre.R
 296d080b37f4f8a3d10e0328a84ace9b *R/log.R
-f53b63e9c370a1ce2951e44e91d1fec9 *R/methods.R
+a4a8bafd0d19ce0071f6175da11815d5 *R/methods.R
 306bc7ed8a1b3746a0e9af255ddcd37a *R/polynomial.R
 b28a85143635108a8a27f808ccc28eff *R/utils.R
 1c9695dee7162d6e72883b552906e753 *cleanup
-5262dc12837fe70368ef89c237c47c96 *inst/NEWS.Rd
+4dbd6e26b21ca98c48e87e02639f6f69 *inst/NEWS.Rd
 8cb66017e7b800b4a368f0b658049816 *man/Bernstein_basis.Rd
 e302699142ee0fef7062985a604afd3d *man/Legendre_basis.Rd
 e346889cf14daf60e656a13dd60ac16a *man/as.basis.formula.Rd
