@@ -27,6 +27,7 @@ S3method("c", "bases")
 S3method("as.vars", "basis")
 S3method("as.vars", "bases")
 S3method("nparm", "basis")
+S3method("nparm", "intercept_basis")
 S3method("nparm", "box_bases")
 S3method("nparm", "cbind_bases")
 S3method("model.matrix", "Bernstein_basis")
